src/app/Index.module.css
.container {
  width: 100%;
  max-width: 1200px;
  margin-right: auto;
  margin-left: auto;
  height: 100vh;
}

.benefits {
  background-color: #e0e0e0;
  text-align: center;
  border-radius: 50px;
  margin-top: 50px;
}

.heroshotContainer {
  border-radius: 50px;
  overflow: hidden;
}

.hook {
  text-align: center;
}

.about {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
}

.aboutText {
  margin: 20px;
}

.bold {
  font-weight: 700;
}

.heroCard {
  padding: 20px;
}

.logo {
  border-radius: 16px;
}

.selfie {
  border-radius: 50%;
}

#demoSection {
  text-align: center;
  margin-top: 50px;
}

@media only screen and (max-width: 576px) {
  .benefits {
    display: block;
    text-align: center;
  }
  .hero {
    display: block;
  }
  .heroCard {
    width: 100%;
  }
  .heroshotContainer {
    height: 300px;
    width: 100%;
    overflow: hidden;
  }
  .heroImage {
    width: 100%;
    object-position: 0% 100%;
  }
  .hook {
    margin: 0 auto;
    padding: 20px;
  }
  .features {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(6, auto);
  }
  .about {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
  }
  .aboutText {
    margin: 20px;
  }
}

@media only screen and (min-width: 576px) {
  .benefits {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-bottom: 50px;
    gap: 20px;
  }
  .hero {
    display: flex;
    height: 600px;
    width: 100%;
    align-items: center;
  }
  .feature {
    padding: 20px;
  }
  .features {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, auto);
  }
  .heroCard {
    width: 60%;
    margin: 0 auto;
  }
  .heroshotContainer {
    width: 35%;
    overflow: hidden;
  }
  .heroImage {
    width: 100%;
    height: auto;
  }
  .hook {
    width: 50%;
    margin: 0 auto;
  }
}

@media only screen and (min-width: 992px) {
  .features {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, auto);
  }
  .about {
    width: 50%;
  }
  .hero {
    display: flex;
    align-items: center;
    height: 400px;
    width: 100%;
  }
  .heroImage {
    display: flex;
    width: 100%;
    height: auto;
    object-fit: contain;
  }
  .heroshotContainer {
    width: 60%;
    margin-right: 3em;
    margin-top: 3em;
    overflow: hidden;
    max-width: 400px;
  }
  .heroCard {
    width: 40%;
  }
  .hook {
    width: 50%;
    margin: 0 auto;
  }
}

.mentorship {
  padding: 20px; /* Padding around the content */
  margin: 40px 0; /* Margin to separate from other sections */
  text-align: center; /* Center-align text for emphasis */
}

.mentorLink {
  color: #007bff; /* Blue color for links */
  text-decoration: none; /* Remove underline */
  transition: color 0.3s; /* Smooth transition */
}

.footer {
  background-color: #e0e0e0; /* Dark background for footer */
  padding: 20px 0; /* Top and bottom padding */
  margin-top: 40px; /* Margin to separate from other sections */
  text-align: center; /* Light text color for contrast */
}

.footer a {
  color: #007bff; /* Blue color for links */
  text-decoration: none; /* Remove underline */
  transition: color 0.3s; /* Smooth transition */
}

.footer a:hover {
  color: #0056b3; /* Darker blue on hover */
}

.footer small {
  display: block; /* Block display for separation */
  margin-top: 10px; /* Space above copyright */
  font-size: 0.9em; /* Smaller font size */
  color: #bbb; /* Light color for contrast */
}

